--- a/templates/contato.html
+++ b/templates/contato.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contato - Portfólio</title>
+    <title>Contato</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css" rel="stylesheet">
-    <link href="/stylecontato.css" rel="stylesheet">
+    <link href="/static/estilos/stylecontato.css" rel="stylesheet">
+    <link rel="icon" href="/static/imagens/logonova.png" type="image/x-icon">
     
 </head>
 <body>
@@ -15,7 +16,7 @@
         <div class="container-fluid">
 
             <a class="navbar-brand px-5" href="#">
-                <img src="/logonova.png" style="width: 110px; height: 65px;" alt="logosite">
+                <img src="/static/imagens/logonova.png" style="width: 110px; height: 65px;" alt="logosite">
             </a>
             
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,16 +27,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto gap-4">
                     <li class="nav-item">
-                        <a class="nav-link" href="/index.html">Home</a>
+                        <a class="nav-link" href="/templates/index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Projetos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/apresentação.html">Sobre mim</a>
+                        <a class="nav-link" href="/templates/apresentação.html">Sobre mim</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/contato.html">Contato</a>
+                        <a class="nav-link" href="/templates/contato.html">Contato</a>
                     </li>
                 </ul>
             </div>
