--- a/templates/index.html
+++ b/templates/index.html
@@ -3,19 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BOOTSTRAP</title>
+    <title>Meu Portifólio </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <link href="/style.css" rel="stylesheet">
+    <link href="/static/estilos/style.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css"
     rel="stylesheet">
+    <link rel="icon" href="/static/imagens/logonova.png" type="image/x-icon">
 </head>
-<body class="bg-dark">
-    <nav class="navbar navbar-expand-lg bg-dark navbar-light py-2">
+<body class="bg-black">
+    <nav class="navbar navbar-expand-lg bg-black navbar-light py-2">
         <div class="container-fluid">
 
             <a class="navbar-brand px-5" href="#">
-                <img src="/logonova.png" style="width: 110px; height: 65px;" alt="logosite">
+                <img src="/static/imagens/logonova.png" style="width: 220px; height: 105px;" alt="logosite">
             </a>
             
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,16 +27,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto gap-4">
                     <li class="nav-item">
-                        <a class="nav-link" href="/index.html">Home</a>
+                        <a class="nav-link" href="/templates/index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Projetos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/apresentação.html">Sobre mim</a>
+                        <a class="nav-link" href="/templates/apresentação.html">Sobre mim</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/contato.html">Contato</a>
+                        <a class="nav-link" href="/templates/contato.html">Contato</a>
                     </li>
                 </ul>
             </div>
@@ -45,13 +46,13 @@
     <div id="demo" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="/primeira.jpg" alt="imagemum" class="img-fluid d-block w-100">
+                <img src="/static/imagens/primeira.jpg" alt="imagemum" class="img-fluid d-block w-100">
             </div>
             <div class="carousel-item">
-                <img src="/segunda.jpg" alt="imagemdois" class="img-fluid d-block w-100">
+                <img src="/static/imagens/segunda.jpg" alt="imagemdois" class="img-fluid d-block w-100">
             </div>
             <div class="carousel-item">
-                <img src="/terceira.jpg" alt="imagemtres" class="img-fluid d-block w-100">
+                <img src="/static/imagens/terceira.jpg" alt="imagemtres" class="img-fluid d-block w-100">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
@@ -63,20 +64,21 @@
     </div>
     <div class="container">
         <h2 class="text-light py-3">Seja Bem-Vindo</h2>
-        <p class="lead text-light">Este website foi cuidadosamente desenvolvido por mim, um apaixonado por tecnologia e inovação. Aqui, você poderá conhecer mais sobre os projetos que desenvolvi, cada um com soluções criativas e eficientes, além de explorar meu currículo completo. Meu objetivo é transformar ideias em realidade digital, sempre com foco em qualidade e funcionalidade. Sinta-se à vontade para navegar e conhecer o que eu posso oferecer. Fique à vontade para explorar e descobrir o meu trabalho!
-            !</p>
+        <p class="lead text-light pb-3">“Este website foi cuidadosamente desenvolvido por mim, um apaixonado por tecnologia e inovação. Aqui, você poderá conhecer mais sobre os projetos que desenvolvi, cada um com soluções criativas e eficientes, além de explorar meu currículo completo. Meu objetivo é transformar ideias em realidade digital, sempre com foco em qualidade e funcionalidade. Sinta-se à vontade para navegar e conhecer o que eu posso oferecer. Fique à vontade para explorar e descobrir o meu trabalho! !”</p>
     </div>
 
     <div class="container-fluid w-100 d-block  p-0">
-        <img src="/capa2.jpg" alt="curriculo" class="img-fluid w-100 d-block">
+        <img src="/static/imagens/capa2.jpg" alt="curriculo" class="img-fluid w-100 d-block" id="capa22">
     </div>
     <div class="container">
-        <h2 class="text-light py-3">Uma breve introdução</h2>
-        <p class="lead text-light pb-3">“Meu nome é Lucas Fernando Guerra, tenho 20 anos e estou cursando Desenvolvimento de Software Multiplataforma na Fatec/SJC. Desde cedo, sempre fui apaixonado por tecnologia e inovação, o que me levou a escolher essa área de estudo. Atualmente, estou em busca de oportunidades para ingressar no mercado de trabalho, onde posso aplicar meus conhecimentos e continuar aprendendo. Sou uma pessoa muito sociável e gosto de trabalhar em equipe, pois acredito que a colaboração é essencial para o sucesso de qualquer projeto. Além disso, estou sempre disposto a aprender novas habilidades e encontrar diferentes formas de solucionar problemas. Meu objetivo com este portfólio é mostrar minhas competências e experiências, e assim, abrir portas para novas oportunidades profissionais.”!</p>
+        <h2 class="text-light text-md-center py-3">Uma breve introdução</h2>
+        <p class="lead text-light pb-3">“Quer conhecer mais sobre os projetos que tenho desenvolvido e como posso ajudar a transformar suas ideias em realidade? Navegue pelo portfólio e veja como as tecnologias que domino podem oferecer resultados impressionantes.
+
+            Explore meus projetos!!!”!</p>
     </div>
     <footer class="container-fluid bg-secondary">
         <div class="container pt-4">
-            <div class="list-group-horizontal text-center">
+            <div class="list-group-horizontal  d-flex gap-5 text-center">
                 <a class=" nav-link text-decoration-none" target="_blank" href="https://www.linkedin.com/in/lucas-guerra000/"> <button type="button" class="list-group-item"><i class="bi bi-linkedin fs-1"></i></button></a>
 
                 <button type="button" class="list-group-item"><i class="bi bi-facebook fs-1"></i></button>
@@ -85,10 +87,7 @@
               
             <a  class="nav-link text-decoration-none" target="_blank"   href="https://github.com/lucasguerra12"> <button type="button" class="list-group-item"><i class="bi bi-github fs-1"></i></button></a>
      </div>
-     <div>
-        <h6 class="text-dark text-center py-4">email para contato:  lucasguerrawr2004@gmail.com</h6>
-    </div>
     </footer>
 
 </body>
-</html>
+</html> 
