--- a/templates/apresentação.html
+++ b/templates/apresentação.html
@@ -25,7 +25,7 @@
     <nav class="navbar navbar-expand-lg py-2" id="nav">
         <div class="container-fluid">
 
-            <a class="navbar-brand px-5" href="/templates/index.html">
+            <a class="navbar-brand px-5" href="/index.html">
                 <img src="/static/imagens/logonova.png" style="width: 220px; height: 105px;" alt="logosite">
             </a>
             
@@ -37,7 +37,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto gap-4">
                     <li class="nav-item">
-                        <a class="nav-link" href="/templates/index.html">Home</a>
+                        <a class="nav-link" href="/index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Projetos</a>
