--- a/templates/contato.html
+++ b/templates/contato.html
@@ -51,13 +51,14 @@
                 <li><strong>E-mail:</strong> <span id="email">lucasguerrawr2004@gmail.com</span> 
                     <button class="btn btn-link" onclick="copyEmail()">Copiar E-mail</button>
                 </li>
-                <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/lucas-guerra000/" class="text-decoration-none" target="_blank">Seu LinkedIn</a></li>
-                <li><strong>GitHub:</strong> <a href="https://github.com/lucasguerra12" class="text-decoration-none" target="_blank">Seu GitHub</a></li>
-                <li><strong>Cidade:</strong> São José dos Campos</li>
+                <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/lucas-guerra000/" class="text-decoration-none" target="_blank">LinkedIn</a></li>
+                <li><strong>GitHub:</strong> <a href="https://github.com/lucasguerra12" class="text-decoration-none" target="_blank">GitHub</a></li>
+                <li><strong>Cidade:</strong> São José dos Campos</li>   
             </ul>
         </div>
     </div>
 
+    
     <script>
         function copyEmail() {
             const email = document.getElementById('email').innerText;
